# MovieBooking

./: CMakeLists.txt  Untitled Diagram.drawio
src/include/: bookmovie.h  movie.h  payment.h  screen.h  seat.h  show.h  theatre.h  theatrecontroller.h
src/include/enums/: PaymentStatus.h
src/modules/: movie.cpp  payment.cpp  screen.cpp  seat.cpp  show.cpp  theatre.cpp  theatrecontroller.cpp
